2008-05-22  Julien Moutte  <julien@fluendo.com>

	* gst/smpte/gstsmptealpha.c: (gst_smpte_alpha_setcaps): Fix
	debug statement arguments.
	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_setup_qos_dscp):
	* gst/udp/gstudpnetutils.c: (gst_udp_join_group),
	(gst_udp_leave_group): Fix IP and IPV6 options to make it work
	on more platforms.

2008-05-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/check/elements/avimux.c: (setup_src_pad),
	(teardown_src_pad):
	* tests/check/elements/icydemux.c: (icydemux_found_pad),
	(GST_START_TEST):
	* tests/check/elements/matroskamux.c: (setup_src_pad),
	(teardown_src_pad), (setup_sink_pad), (teardown_sink_pad):
	* tests/check/elements/videocrop.c: (video_crop_get_test_caps),
	(GST_START_TEST):
	* tests/check/elements/wavpackparse.c: (wavpackparse_found_pad),
	(setup_wavpackparse), (cleanup_wavpackparse):
	Don't use gst_element_get_pad(), it's a bad, bad method.

2008-05-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/gconf/gstgconfaudiosrc.c: (gst_gconf_audio_src_reset),
	(do_toggle_element):
	* ext/gconf/gstgconfvideosink.c: (gst_gconf_video_sink_reset),
	(do_toggle_element):
	* ext/gconf/gstgconfvideosrc.c: (gst_gconf_video_src_reset),
	(do_toggle_element):
	* ext/gconf/gstswitchsink.c: (gst_switch_commit_new_kid):
	* ext/hal/gsthalaudiosink.c: (gst_hal_audio_sink_reset),
	(do_toggle_element):
	* ext/hal/gsthalaudiosrc.c: (gst_hal_audio_src_reset),
	(do_toggle_element):
	* gst/autodetect/gstautoaudiosink.c: (gst_auto_audio_sink_reset),
	(gst_auto_audio_sink_detect):
	* gst/autodetect/gstautovideosink.c: (gst_auto_video_sink_reset),
	(gst_auto_video_sink_detect):
	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_init),
	(gst_rtspsrc_stream_free), (gst_rtspsrc_stream_configure_udp),
	(gst_rtspsrc_stream_configure_udp_sink), (gst_rtspsrc_skip_lws),
	(gst_rtspsrc_unskip_lws), (gst_rtspsrc_skip_commas),
	(gst_rtspsrc_skip_item), (gst_rtsp_decode_quoted_string),
	(gst_rtspsrc_parse_digest_challenge), (gst_rtspsrc_parse_auth_hdr):