@@ -13,7 +13,10 @@ built_headers = gstudp-enumtypes.h gstudp-marshal.h
 BUILT_SOURCES = $(built_sources) $(built_headers)
 
 libgstudp_la_SOURCES = gstudp.c gstudpsrc.c gstudpsink.c gstmultiudpsink.c gstdynudpsink.c gstudpnetutils.c
-libgstudp_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
+
+# adding -D_GNU_SOURCE to get non-POSIX extensions like EAI_ADDRFAMILY
+# with glibc >= 2.8 when including netdb.h (see glibc sources bug 6452)
+libgstudp_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) -D_GNU_SOURCE
 libgstudp_la_LIBADD = $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) $(WIN32_LIBS)\
 		      -lgstnetbuffer-@GST_MAJORMINOR@
 libgstudp_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
